[package]
name = "client-win32-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Controls",
  "Win32_UI_WindowsAndMessaging"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
sha2 = "0.10"
rfd = "0.15"
